@@ -79,6 +79,10 @@ defyn SURFRAW_escape_url_args	yes
 # just print search url?
 defyn SURFRAW_print             no
 
+# Fetch and dump url?
+defyn SURFRAW_dump		no
+
 # Language/country (for elvi that support it)
 # Should be a 2-letter iso country code
 def SURFRAW_lang     	  	""
+
